--- a/masters_thesis/thesis.bib
+++ b/masters_thesis/thesis.bib
@@ -75,6 +75,23 @@
     urldate={2018-12-03},
 }
 
+@online{llvm-ir,
+    author={LLVM},
+    title="{LLVM Language Reference Manual}",
+    year={2018},
+    url={https://llvm.org/docs/LangRef.html},
+    urldate={2018-12-03},
+}
+
+@online{llvm-bb,
+    author={LLVM},
+    title="{llvm::BasicBlock Class Reference}",
+    year={2018},
+    url={https://llvm.org/doxygen/classllvm_1_1BasicBlock.html},
+    urldate={2018-12-03},
+}
+
+
 @online{dg-github,
     author={CHALUPA, Marek},
     title="{Dependence graph for programs. Generic implementation of dependence
@@ -85,10 +102,13 @@
     urldate={2018-12-03},
 }
 
-https://llvm.org/docs/SourceLevelDebugging.html
-
-% https://github.com/examon/APEX
-% https://github.com/mchalupa/dg/
+@online{asoa,
+    author={Chris Lattner},
+    title="{LLVM - The Architecture of Open Source Applications}",
+    year={2018},
+    url={http://aosabook.org/en/llvm.html},
+    urldate={2018-11-03},
+}
 
 
 
